--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #000000;
+  background-color: #666666;
   padding: 1rem 2rem;
   display: flex;
   justify-content: space-between;
@@ -10,6 +10,7 @@
 .navbar-brand {
   font-size: 1.5rem;
   font-weight: bold;
+  color:#ffffff;
 }
 
 .navbar-links {
